--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.portals (7.0.0) jammy; urgency=medium
+
+  * New upstream release
+
+ -- Danielle Foré <danielle@elementary.io>  Tue, 28 Feb 2023 08:37:43 -0800
+
 io.elementary.portals (1.2.0) focal; urgency=medium
 
   * Release 1.2.0 (#57)
