--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.portals (7.1.0) jammy; urgency=medium
+
+  * New upstream release
+
+ -- Danielle Foré <danielle@elementary.io>  Mon, 26 Jun 2023 09:13:55 -0700
+
 io.elementary.portals (7.0.0) jammy; urgency=medium
 
   * New upstream release
