--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.portals (7.2.0) jammy; urgency=medium
+
+  * New upstream release
+
+ -- Danielle Foré <danielle@elementary.io>  Wed, 24 Jul 2024 10:54:51 -0700
+
 io.elementary.portals (7.1.1) jammy; urgency=medium
 
   * New upstream release
