--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.portals (8.0.2) noble; urgency=medium
+
+  * Release 8.0.2
+
+ -- Danielle Foré <danielle@elementary.io>  Tue, 10 Jun 2025 14:17:28 -0700
+
 io.elementary.portals (8.0.1) noble; urgency=medium
 
   * Release 8.0.1
