--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.portals (8.0.3) noble; urgency=medium
+
+  * Release 8.0.3
+
+ -- Danielle Foré <danielle@elementary.io>  Fri, 13 Jun 2025 12:31:24 -0700
+
 io.elementary.portals (8.0.2) noble; urgency=medium
 
   * Release 8.0.2
