--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.portals (8.0.4) noble; urgency=medium
+
+  * Release 8.0.4
+
+ -- Ryo Nakano <ryonakaknock3@gmail.com>  Mon, 23 Jun 2025 07:05:10 +0900
+
 io.elementary.portals (8.0.3) noble; urgency=medium
 
   * Release 8.0.3
