--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+io.elementary.portals (8.1.0) noble; urgency=medium
+
+  * Release 8.1.0
+
+ -- Danielle Foré <danielle@elementary.io>  Thu, 22 Jan 2026 14:42:36 -0800
+
 io.elementary.portals (8.0.4) noble; urgency=medium
 
   * Release 8.0.4
